dropdwon menu fixed and caret icon align to right

--- a/public/css/material-kit.css
+++ b/public/css/material-kit.css
@@ -2379,11 +2379,11 @@ legend {
   padding: 10px 20px;
   margin: 0 5px;
   border-radius: 2px;
-  -webkit-transition: all 150ms linear;
-  -moz-transition: all 150ms linear;
-  -o-transition: all 150ms linear;
-  -ms-transition: all 150ms linear;
-  transition: all 150ms linear;
+  -webkit-transition: all 150ms ease-in-out;
+  -moz-transition: all 150ms ease-in-out;
+  -o-transition: all 150ms ease-in-out;
+  -ms-transition: all 150ms ease-in-out;
+  transition: all 150ms ease-in-out;
 }
 .dropdown-menu li > a:hover, .dropdown-menu li > a:focus {
   box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
@@ -2402,22 +2402,22 @@ legend {
 }
 
 @media (min-width: 992px) {
-  .dropdown .dropdown-menu {
-    -webkit-transition: all 150ms linear;
-    -moz-transition: all 150ms linear;
-    -o-transition: all 150ms linear;
-    -ms-transition: all 150ms linear;
-    transition: all 150ms linear;
-    margin-top: -20px;
-    opacity: 0;
-    visibility: hidden;
-    display: block;
-  }
-  .dropdown.open .dropdown-menu {
-    opacity: 1;
-    visibility: visible;
-    margin-top: 1px;
-  }
+  /*.dropdown .dropdown-menu {*/
+  /*  -webkit-transition: all 150ms linear;*/
+  /*  -moz-transition: all 150ms linear;*/
+  /*  -o-transition: all 150ms linear;*/
+  /*  -ms-transition: all 150ms linear;*/
+  /*  transition: all 150ms linear;*/
+  /*  margin-top: -20px;*/
+  /*  opacity: 0;*/
+  /*  visibility: hidden;*/
+  /*  display: block;*/
+  /*}*/
+  /*.dropdown.open .dropdown-menu {*/
+  /*  opacity: 1;*/
+  /*  visibility: visible;*/
+  /*  margin-top: 1px;*/
+  /*}*/
 }
 .info {
   max-width: 360px;
