--- a/public/css/white_main.css
+++ b/public/css/white_main.css
@@ -182,8 +182,8 @@ body {
 }
 
 .navbar-fixed-left .navbar-nav > li:hover, .navbar-fixed-left .navbar-nav > .active > a, .navbar-fixed-left .navbar-nav > li a:hover, .dropdown-menu li:hover, .dropdown-menu li > a:hover, .dropdown-menu li:focus, .dropdown-menu li > a:focus {
-    background-color: #f3f3f3 !important;
-    color: black !important;
+    background-color:  #404E67 !important;;
+    color: white !important;
     box-shadow: none;
 }
 
@@ -233,12 +233,13 @@ body {
 }
 
 #sideNavbar .caret {
-    position: relative;
-    top: 2px;
+    position: absolute;
+    top: 19px;
+    right: 17px;
 }
 
 #sideNavbar .navbar-nav {
-    width: 100%;
+width: 100%;
 }
 
 /* Large Devices, Wide Screens */
